--- a/index_nl.html
+++ b/index_nl.html
@@ -102,6 +102,9 @@
 
   <nav class="grid">
     <a href="1_nl.html">1</a>
+    <a href="2_nl.html">2</a>
+    <a href="3_nl.html">3</a>
+    <a href="4_nl.html">4</a>
   </nav>
 
   <div class="scroll-buffer"></div>
