--- a/part 13_en.html
+++ b/part 13_en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr"><head>
+<html lang="ar"><head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
 <title>Flashcards</title>
@@ -105,16 +105,24 @@ body.scrolled #return-button{
 <!-- Settings modal -->
 <div id="settings-modal" class="modal"><div class="modal-content">
 <span class="close" title="Close">×</span><h2>Voice Settings</h2>
-<div class="lang-settings" data-lang="fr">
-  <label>French voice:</label>
+<div class="lang-settings" data-lang="ar">
+  <label>Arabic voice:</label>
   <select class="voice-select"></select>
   <label>Rate: <span class="rate-value">1</span></label>
   <input type="range" class="rate-range" min="0.5" max="2" step="0.1" value="1">
   <label>Pitch: <span class="pitch-value">1</span></label>
   <input type="range" class="pitch-range" min="0" max="2" step="0.1" value="1">
 </div><hr>
-<div class="lang-settings" data-lang="nl">
-  <label>Dutch voice:</label>
+<div class="lang-settings" data-lang="en">
+  <label>English voice:</label>
+  <select class="voice-select"></select>
+  <label>Rate: <span class="rate-value">1</span></label>
+  <input type="range" class="rate-range" min="0.5" max="2" step="0.1" value="1">
+  <label>Pitch: <span class="pitch-value">1</span></label>
+  <input type="range" class="pitch-range" min="0" max="2" step="0.1" value="1">
+</div><hr>
+<div class="lang-settings" data-lang="fr">
+  <label>French voice:</label>
   <select class="voice-select"></select>
   <label>Rate: <span class="rate-value">1</span></label>
   <input type="range" class="rate-range" min="0.5" max="2" step="0.1" value="1">
@@ -125,8 +133,8 @@ body.scrolled #return-button{
 <button id="return-button" title="Return">←</button>
 
 <script>
-const LANGS = ["fr", "nl"];
-const CARDS = [{"fr": "Peux-tu me dire combien tu as besoin ?", "nl": "Kun je me vertellen hoeveel je nodig hebt."}, {"fr": "Je suis parti à l'école.", "nl": "Ik ben naar school gegaan."}, {"fr": "Non, je ne suis pas parti à l'école.", "nl": "Nee, ik ben niet naar school gegaan."}, {"fr": "J'ai parlé avec lui.", "nl": "Ik heb met hem gesproken."}, {"fr": "Non, je n'ai pas parlé avec lui.", "nl": "Nee, ik heb niet met hem gesproken."}, {"fr": "J'ai bu du jus d'orange.", "nl": "Ik heb sinaasappelsap gedronken."}, {"fr": "Non, je n'ai pas bu de jus d'orange.", "nl": "Nee, ik heb geen sinaasappelsap gedronken."}, {"fr": "J'ai bu.", "nl": "Ik heb gedronken."}, {"fr": "Non, je n'ai pas bu.", "nl": "Nee, ik heb niet gedronken."}, {"fr": "J'ai mangé.", "nl": "Ik heb gegeten."}, {"fr": "Non, je n'ai pas mangé.", "nl": "Nee, ik heb niet gegeten."}, {"fr": "J'ai fait ça.", "nl": "Ik heb dat gedaan."}, {"fr": "Non, je n'ai pas fait ça.", "nl": "Nee, ik heb dat niet gedaan."}, {"fr": "J'ai fait.", "nl": "Ik heb gedaan."}, {"fr": "Je n'ai rien fait.", "nl": "Ik heb niets gedaan."}, {"fr": "J'ai mangé une pomme.", "nl": "Ik heb een appel gegeten."}, {"fr": "Non, je n'ai pas mangé de pomme.", "nl": "Nee, ik heb geen appel gegeten."}, {"fr": "J'ai décidé.", "nl": "Ik heb besloten."}, {"fr": "Je n'ai pas décidé.", "nl": "Ik heb niet besloten."}, {"fr": "Je n'ai pas encore décidé.", "nl": "Ik heb nog niet besloten."}, {"fr": "Ça c'est vrai.", "nl": "Dat is waar."}, {"fr": "Non, ça ce n'est pas vrai.", "nl": "Nee, dat is niet waar."}, {"fr": "Tu peux m'aider.", "nl": "Je kunt me helpen."}, {"fr": "Non, tu ne peux pas m'aider.", "nl": "Nee, je kunt me niet helpen."}, {"fr": "Je ne sais pas.", "nl": "Ik weet het niet."}, {"fr": "Non, tu ne m'aides pas.", "nl": "Nee, je helpt me niet."}, {"fr": "Tu m'as aidé.", "nl": "Je hebt me geholpen."}, {"fr": "Non, tu ne m'as pas aidé.", "nl": "Nee, je hebt me niet geholpen."}, {"fr": "J'ai fait beaucoup de choses.", "nl": "Ik heb veel dingen gedaan."}, {"fr": "Je n'ai rien fait.", "nl": "Ik heb niets gedaan."}, {"fr": "Je dois l'améliorer.", "nl": "Ik moet het verbeteren."}, {"fr": "Je sais.", "nl": "Ik weet het."}, {"fr": "Je ne sais pas.", "nl": "Ik weet het niet."}];
+const LANGS = ["ar", "en", "fr"];
+const CARDS = [{"ar": "تعميم الصور النمطية", "en": "Perpetuating stereotypes", "fr": "Perpétuer les stéréotypes"}, {"ar": "عندما تغير وجهة نظرك، قد تجد حلاً جديدًا للمشكلة", "en": "When your perspective changes, you might find a new solution to the problem", "fr": "Quand votre perspective change, vous pourriez trouver une nouvelle solution au problème."}, {"ar": "اشعة الليزر", "en": "Laser beams", "fr": "Faisceaux laser"}, {"ar": "بغض النظر عما إذا كنتما متفقين", "en": "Regardless, like if you and her see eye to eye", "fr": "Peu importe si vous êtes d'accord"}, {"ar": "توفّر المال من أجل السفر حول العالم", "en": "She saves money in order to travel around the world", "fr": "Elle économise de l'argent pour voyager autour du monde."}, {"ar": "قررت أن تتحدى رغبات والديها وتسعى لمتابعة مسار فني بدلاً من الطب", "en": "She decided to defy her parents' wishes and pursue a career in art instead of medicine", "fr": "Elle a décidé de défier les souhaits de ses parents et de poursuivre une carrière artistique plutôt que médicale."}, {"ar": "الوصول إلى تعليم ذو جودة عالية هو امتياز ليس للجميع", "en": "Having access to quality education is a privilege that not everyone enjoys", "fr": "Avoir accès à une éducation de qualité est un privilège que tout le monde ne peut pas se permettre."}, {"ar": "طالب لجوء", "en": "Asylum seeker", "fr": "Demandeur d'asile"}, {"ar": "إنجاز", "en": "Accomplishment", "fr": "Réussite"}, {"ar": "حتى العرسان الجدد يتجادلون أحيانًا", "en": "Even newlyweds sometimes argue", "fr": "Même les jeunes mariés se disputent parfois"}, {"ar": "من حين إلى آخر", "en": "Occasional", "fr": "Occasionnel"}, {"ar": "غير رسمي", "en": "Casual", "fr": "Décontracté"}, {"ar": "تحريف الحقائق التاريخية", "en": "Distorting historical facts", "fr": "Déformer les faits historiques"}, {"ar": "زراعة الأفوكادو تسبب الجفاف", "en": "Planting avocados causes drought", "fr": "La plantation d'avocats provoque la sécheresse."}, {"ar": "غزو", "en": "Invading", "fr": "Envahir"}];
 
 /* ───────── Remembered state ───────── */
 let remembered = {};
