--- a/part 17_en.html
+++ b/part 17_en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr"><head>
+<html lang="ar"><head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
 <title>Flashcards</title>
@@ -105,16 +105,24 @@ body.scrolled #return-button{
 <!-- Settings modal -->
 <div id="settings-modal" class="modal"><div class="modal-content">
 <span class="close" title="Close">×</span><h2>Voice Settings</h2>
-<div class="lang-settings" data-lang="fr">
-  <label>French voice:</label>
+<div class="lang-settings" data-lang="ar">
+  <label>Arabic voice:</label>
   <select class="voice-select"></select>
   <label>Rate: <span class="rate-value">1</span></label>
   <input type="range" class="rate-range" min="0.5" max="2" step="0.1" value="1">
   <label>Pitch: <span class="pitch-value">1</span></label>
   <input type="range" class="pitch-range" min="0" max="2" step="0.1" value="1">
 </div><hr>
-<div class="lang-settings" data-lang="nl">
-  <label>Dutch voice:</label>
+<div class="lang-settings" data-lang="en">
+  <label>English voice:</label>
+  <select class="voice-select"></select>
+  <label>Rate: <span class="rate-value">1</span></label>
+  <input type="range" class="rate-range" min="0.5" max="2" step="0.1" value="1">
+  <label>Pitch: <span class="pitch-value">1</span></label>
+  <input type="range" class="pitch-range" min="0" max="2" step="0.1" value="1">
+</div><hr>
+<div class="lang-settings" data-lang="fr">
+  <label>French voice:</label>
   <select class="voice-select"></select>
   <label>Rate: <span class="rate-value">1</span></label>
   <input type="range" class="rate-range" min="0.5" max="2" step="0.1" value="1">
@@ -125,8 +133,8 @@ body.scrolled #return-button{
 <button id="return-button" title="Return">←</button>
 
 <script>
-const LANGS = ["fr", "nl"];
-const CARDS = [{"fr": "Peux-tu me dire combien tu as besoin ?", "nl": "Kun je me vertellen hoeveel je nodig hebt."}, {"fr": "Je suis parti à l'école.", "nl": "Ik ben naar school gegaan."}, {"fr": "Non, je ne suis pas parti à l'école.", "nl": "Nee, ik ben niet naar school gegaan."}, {"fr": "J'ai parlé avec lui.", "nl": "Ik heb met hem gesproken."}, {"fr": "Non, je n'ai pas parlé avec lui.", "nl": "Nee, ik heb niet met hem gesproken."}, {"fr": "J'ai bu du jus d'orange.", "nl": "Ik heb sinaasappelsap gedronken."}, {"fr": "Non, je n'ai pas bu de jus d'orange.", "nl": "Nee, ik heb geen sinaasappelsap gedronken."}, {"fr": "J'ai bu.", "nl": "Ik heb gedronken."}, {"fr": "Non, je n'ai pas bu.", "nl": "Nee, ik heb niet gedronken."}, {"fr": "J'ai mangé.", "nl": "Ik heb gegeten."}, {"fr": "Non, je n'ai pas mangé.", "nl": "Nee, ik heb niet gegeten."}, {"fr": "J'ai fait ça.", "nl": "Ik heb dat gedaan."}, {"fr": "Non, je n'ai pas fait ça.", "nl": "Nee, ik heb dat niet gedaan."}, {"fr": "J'ai fait.", "nl": "Ik heb gedaan."}, {"fr": "Je n'ai rien fait.", "nl": "Ik heb niets gedaan."}, {"fr": "J'ai mangé une pomme.", "nl": "Ik heb een appel gegeten."}, {"fr": "Non, je n'ai pas mangé de pomme.", "nl": "Nee, ik heb geen appel gegeten."}, {"fr": "J'ai décidé.", "nl": "Ik heb besloten."}, {"fr": "Je n'ai pas décidé.", "nl": "Ik heb niet besloten."}, {"fr": "Je n'ai pas encore décidé.", "nl": "Ik heb nog niet besloten."}, {"fr": "Ça c'est vrai.", "nl": "Dat is waar."}, {"fr": "Non, ça ce n'est pas vrai.", "nl": "Nee, dat is niet waar."}, {"fr": "Tu peux m'aider.", "nl": "Je kunt me helpen."}, {"fr": "Non, tu ne peux pas m'aider.", "nl": "Nee, je kunt me niet helpen."}, {"fr": "Je ne sais pas.", "nl": "Ik weet het niet."}, {"fr": "Non, tu ne m'aides pas.", "nl": "Nee, je helpt me niet."}, {"fr": "Tu m'as aidé.", "nl": "Je hebt me geholpen."}, {"fr": "Non, tu ne m'as pas aidé.", "nl": "Nee, je hebt me niet geholpen."}, {"fr": "J'ai fait beaucoup de choses.", "nl": "Ik heb veel dingen gedaan."}, {"fr": "Je n'ai rien fait.", "nl": "Ik heb niets gedaan."}, {"fr": "Je dois l'améliorer.", "nl": "Ik moet het verbeteren."}, {"fr": "Je sais.", "nl": "Ik weet het."}, {"fr": "Je ne sais pas.", "nl": "Ik weet het niet."}];
+const LANGS = ["ar", "en", "fr"];
+const CARDS = [{"ar": "تهج", "en": "Spell", "fr": "Épeler"}, {"ar": "تناغم", "en": "Coherence", "fr": "Cohérence"}, {"ar": "جسد رائع بروح قاتمة", "en": "Gorgeous body with a dark spirit", "fr": "Un corps magnifique avec une âme sombre"}, {"ar": "لا احب الحديث المطلق", "en": "I don’t like to talk in absolutes", "fr": "Je n'aime pas parler en termes absolus"}, {"ar": "مسئولية", "en": "Accountability", "fr": "Responsabilité"}, {"ar": "معفى", "en": "Exempted", "fr": "Exempté"}, {"ar": "communautarisme", "en": "Communitarism", "fr": "Communautarisme"}, {"ar": "عدل النواب نص القانون هذا", "en": "The deputies amended this law", "fr": "Les députés ont amendé ce texte de loi"}, {"ar": "غير واعٍ", "en": "Oblivious", "fr": "Inconscient / Inconsciente"}, {"ar": "واللي يخلي مدينه نيورك متميزه", "en": "What makes New York City special?", "fr": "Qu'est-ce qui distingue la ville de New York ?"}, {"ar": "لماذا تهتم بمعرفة ذلك؟", "en": "But why do you care to know?", "fr": "Mais pourquoi tu te souciés de savoir ?"}, {"ar": "خزائن", "en": "Wardrobes", "fr": "Placards"}, {"ar": "تمنيت لو كنت أكثر حكمة في ذلك الوقت", "en": "I wished I was wiser at the time", "fr": "J'aurais aimé être plus sage à l'époque"}, {"ar": "في هذا البلد الجميع حر في فعل ما يشاء، إذا لم يعجبك ذلك", "en": "In this country, everyone is free to do what they want. If you don't like that, feel free to go back to where your ancestors came from because this land is not yours.", "fr": "Dans ce pays, chacun est libre de faire ce qu'il veut. Si vous n'aimez pas ça, n'hésitez pas à retourner d'où viennent vos ancêtres parce que cette terre n'est pas la vôtre."}, {"ar": "شيئا فشيئا؛ باستمرار", "en": "Little by little; constantly", "fr": "Au fur et à mesure"}, {"ar": "يجب على تركيا أن تقتصر على خريطتها الجغرافية", "en": "Turkey should limit itself to its geographical borders and not intervene in conflicts.", "fr": "La Turquie doit se limiter à sa carte géographique et ne plus intervenir dans les conflits."}, {"ar": "محا", "en": "Rub out", "fr": "Effacer"}, {"ar": "إنه تأثير أيديولوجي يأتي من بقايا الفترة الاستعمارية القديمة", "en": "It's an ideological effect from the remnants of the colonial period.", "fr": "C'est un effet idéologique qui vient de l'ancien vestige de la période coloniale."}, {"ar": "هذا النوع من السلوك هو جزء من بقايا الاستعمار", "en": "This kind of behavior is part of the remnants of colonialism.", "fr": "Ce genre de comportement fait partie d'un vestige de la colonisation."}, {"ar": "تصرف غير انساني", "en": "Inhumane behavior", "fr": "Comportement inhumain"}, {"ar": "تدخل", "en": "Interfere", "fr": "Interférer"}, {"ar": "تم فهم رسالة الحجر الصحي هنا", "en": "The confinement message was understood here.", "fr": "Le message de confinement a été compris ici."}, {"ar": "عندما تقترب", "en": "When it comes closer", "fr": "Quand ça s'approche"}, {"ar": "مغري", "en": "Tempting", "fr": "Tentant"}, {"ar": "عريس", "en": "Bridegroom", "fr": "Jeune marié"}, {"ar": "يقال أن المشتبه به خدع عددًا من كبار السن", "en": "The suspect apparently conned a number of elderly people.", "fr": "Le suspect a apparemment escroqué un certain nombre de personnes âgées."}, {"ar": "الأنانية", "en": "Selfishness", "fr": "Égoïsme"}, {"ar": "اليابان ستستضيف الألعاب الأولمبية \"كما هو مخطط\"", "en": "Japan will host the Olympics \"as planned,\" assures the Prime Minister.", "fr": "Le Japon accueillera les JO « comme prévu », assure le Premier ministre."}, {"ar": "متضامن", "en": "United", "fr": "Solidaire"}, {"ar": "هذا الفيروس أظهر لنا الكثير", "en": "This virus has shown us a lot.", "fr": "Ce virus nous a beaucoup montré."}, {"ar": "لماذا تنفد بطاريتي بهذه السرعة؟", "en": "Why is my battery running down so fast?", "fr": "Pourquoi ma batterie s'épuise si vite ?"}, {"ar": "أنابيب", "en": "Pipes", "fr": "Tuyaux"}, {"ar": "صدمة وفاة والدها تؤذيها حقًا", "en": "The shock of her father's death really hurt her.", "fr": "Le choc de la mort de son père lui a vraiment fait mal."}, {"ar": "أحدهم يساعد هذا الرجل، إنه يختنق!", "en": "Someone help that man, he's choking!", "fr": "Quelqu'un aide cet homme, il s'étouffe !"}, {"ar": "اختنق", "en": "Choke", "fr": "Étouffer"}, {"ar": "كدت أن أفقد وعيي عندما أخبروني بالسعر", "en": "I nearly fainted when they told me the price.", "fr": "Je me suis presque évanoui quand ils m'ont dit le prix."}, {"ar": "هذا غريب", "en": "That’s strange", "fr": "C'est étrange"}, {"ar": "ازدحام ساعة الذروة", "en": "Rush hour traffic", "fr": "Embouteillages aux heures de pointe"}, {"ar": "عندما استولت الجيوش البريطانية على كيبيك ومونتريال", "en": "When British armies captured Quebec in 1759 and Montreal in 1760.", "fr": "Quand les armées britanniques ont capturé Québec en 1759 et Montréal en 1760."}, {"ar": "السياسة الخارجية", "en": "Foreign Policy", "fr": "Politique étrangère"}];
 
 /* ───────── Remembered state ───────── */
 let remembered = {};
