--- a/part 1_en.html
+++ b/part 1_en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr"><head>
+<html lang="ar"><head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
 <title>Flashcards</title>
@@ -105,16 +105,24 @@ body.scrolled #return-button{
 <!-- Settings modal -->
 <div id="settings-modal" class="modal"><div class="modal-content">
 <span class="close" title="Close">×</span><h2>Voice Settings</h2>
-<div class="lang-settings" data-lang="fr">
-  <label>French voice:</label>
+<div class="lang-settings" data-lang="ar">
+  <label>Arabic voice:</label>
   <select class="voice-select"></select>
   <label>Rate: <span class="rate-value">1</span></label>
   <input type="range" class="rate-range" min="0.5" max="2" step="0.1" value="1">
   <label>Pitch: <span class="pitch-value">1</span></label>
   <input type="range" class="pitch-range" min="0" max="2" step="0.1" value="1">
 </div><hr>
-<div class="lang-settings" data-lang="nl">
-  <label>Dutch voice:</label>
+<div class="lang-settings" data-lang="en">
+  <label>English voice:</label>
+  <select class="voice-select"></select>
+  <label>Rate: <span class="rate-value">1</span></label>
+  <input type="range" class="rate-range" min="0.5" max="2" step="0.1" value="1">
+  <label>Pitch: <span class="pitch-value">1</span></label>
+  <input type="range" class="pitch-range" min="0" max="2" step="0.1" value="1">
+</div><hr>
+<div class="lang-settings" data-lang="fr">
+  <label>French voice:</label>
   <select class="voice-select"></select>
   <label>Rate: <span class="rate-value">1</span></label>
   <input type="range" class="rate-range" min="0.5" max="2" step="0.1" value="1">
@@ -125,8 +133,8 @@ body.scrolled #return-button{
 <button id="return-button" title="Return">←</button>
 
 <script>
-const LANGS = ["fr", "nl"];
-const CARDS = [{"fr": "Peux-tu me dire combien tu as besoin ?", "nl": "Kun je me vertellen hoeveel je nodig hebt."}, {"fr": "Je suis parti à l'école.", "nl": "Ik ben naar school gegaan."}, {"fr": "Non, je ne suis pas parti à l'école.", "nl": "Nee, ik ben niet naar school gegaan."}, {"fr": "J'ai parlé avec lui.", "nl": "Ik heb met hem gesproken."}, {"fr": "Non, je n'ai pas parlé avec lui.", "nl": "Nee, ik heb niet met hem gesproken."}, {"fr": "J'ai bu du jus d'orange.", "nl": "Ik heb sinaasappelsap gedronken."}, {"fr": "Non, je n'ai pas bu de jus d'orange.", "nl": "Nee, ik heb geen sinaasappelsap gedronken."}, {"fr": "J'ai bu.", "nl": "Ik heb gedronken."}, {"fr": "Non, je n'ai pas bu.", "nl": "Nee, ik heb niet gedronken."}, {"fr": "J'ai mangé.", "nl": "Ik heb gegeten."}, {"fr": "Non, je n'ai pas mangé.", "nl": "Nee, ik heb niet gegeten."}, {"fr": "J'ai fait ça.", "nl": "Ik heb dat gedaan."}, {"fr": "Non, je n'ai pas fait ça.", "nl": "Nee, ik heb dat niet gedaan."}, {"fr": "J'ai fait.", "nl": "Ik heb gedaan."}, {"fr": "Je n'ai rien fait.", "nl": "Ik heb niets gedaan."}, {"fr": "J'ai mangé une pomme.", "nl": "Ik heb een appel gegeten."}, {"fr": "Non, je n'ai pas mangé de pomme.", "nl": "Nee, ik heb geen appel gegeten."}, {"fr": "J'ai décidé.", "nl": "Ik heb besloten."}, {"fr": "Je n'ai pas décidé.", "nl": "Ik heb niet besloten."}, {"fr": "Je n'ai pas encore décidé.", "nl": "Ik heb nog niet besloten."}, {"fr": "Ça c'est vrai.", "nl": "Dat is waar."}, {"fr": "Non, ça ce n'est pas vrai.", "nl": "Nee, dat is niet waar."}, {"fr": "Tu peux m'aider.", "nl": "Je kunt me helpen."}, {"fr": "Non, tu ne peux pas m'aider.", "nl": "Nee, je kunt me niet helpen."}, {"fr": "Je ne sais pas.", "nl": "Ik weet het niet."}, {"fr": "Non, tu ne m'aides pas.", "nl": "Nee, je helpt me niet."}, {"fr": "Tu m'as aidé.", "nl": "Je hebt me geholpen."}, {"fr": "Non, tu ne m'as pas aidé.", "nl": "Nee, je hebt me niet geholpen."}, {"fr": "J'ai fait beaucoup de choses.", "nl": "Ik heb veel dingen gedaan."}, {"fr": "Je n'ai rien fait.", "nl": "Ik heb niets gedaan."}, {"fr": "Je dois l'améliorer.", "nl": "Ik moet het verbeteren."}, {"fr": "Je sais.", "nl": "Ik weet het."}, {"fr": "Je ne sais pas.", "nl": "Ik weet het niet."}];
+const LANGS = ["ar", "en", "fr"];
+const CARDS = [{"ar": "موت من الجوع", "en": "To starve to death, to die of starvation", "fr": "Mourir de faim, mourir de la famine"}, {"ar": "الطرف الآخر من الشارع التالي؟", "en": "On the next block of the street", "fr": "Au prochain pâté de maisons"}, {"ar": "حتى العرسان الجدد يتجادلون أحيانًا", "en": "Even newlyweds sometimes argue", "fr": "Même les jeunes mariés se disputent parfois"}, {"ar": "عرف زملاء روبرت أنه كان يتبع نظامًا غذائيًا ، لكنهم استمروا في إغرائه بالكعك", "en": "Robert's colleagues knew he was on a diet, but they kept tempting him with cakes", "fr": "Les collègues de Robert savaient qu'il était au régime, mais ils n'arrêtaient pas de le tenter avec des gâteaux"}, {"ar": "كل ما كان عليه فعله هو", "en": "All what he had to do was", "fr": "Tout ce qu'il avait à faire c'était"}, {"ar": "أحتاج إلى الذهاب إلى المتجر لشراء بعض الحليب - هل نحتاج إلى أي شيء آخر؟", "en": "I need to pop down to the store for some milk—do we need anything else?", "fr": "Je dois descendre au magasin chercher du lait—avons-nous besoin de quelque chose d'autre ?"}, {"ar": "لقد انتقلنا للتو إلى الطابق السفلي - يجب أن تزورنا يومًا ما!", "en": "We just moved in on the floor below—you should pop down sometime!", "fr": "Nous venons d'emménager à l'étage en dessous—vous devriez passer un de ces jours !"}, {"ar": "كنا في هذا الجزء من المدينة ، لذلك فكرت أن نزوركم.", "en": "We were in this part of town, so I thought we'd pop down for a visit", "fr": "Nous étions dans ce quartier, alors je me suis dit qu'on pourrait passer vous voir"}, {"ar": "فك انسداد المصرف", "en": "Unclog the drain", "fr": "Déboucher le drain"}, {"ar": "لقد لوّث قميصي", "en": "He stained my shirt", "fr": "Il a taché ma chemise"}, {"ar": "إنجاز", "en": "Accomplishment", "fr": "Accomplissement"}, {"ar": "بلاد ما بين النهرين كان اسم منطقة في الشرق الأوسط حيث نشأت الحضارة البشرية منذ آلاف السنين.", "en": "Mesopotamia was the name of a region in the Middle East, where human civilization arose thousands of years ago.", "fr": "La Mésopotamie était le nom d'une région du Moyen-Orient, où la civilisation humaine a vu le jour il y a des milliers d'années."}, {"ar": "ربما سمعت بالسومريين، كانوا أقوى الناس هناك فيما أصبح يعرف بمهد الحضارة.", "en": "You may have heard of the Sumerians. They were the most powerful people there—in what became known as the cradle of civilization.", "fr": "Vous avez peut-être entendu parler des Sumériens. Ils étaient les plus puissants de la région, dans ce qu'on appelle le berceau de la civilisation."}, {"ar": "ربما كان السومريون يعيشون في بيوت طينية، لكنهم كانوا متقدمين جدًا.", "en": "The Sumerians may have lived in mud houses, but they were very sophisticated.", "fr": "Les Sumériens vivaient peut-être dans des maisons en terre, mais ils étaient très sophistiqués."}, {"ar": "لقد طوروا أول نظام كتابة.", "en": "They developed the first writing system.", "fr": "Ils ont développé le premier système d'écriture."}, {"ar": "هي تضع القوانين هنا", "en": "She lays down the laws around here", "fr": "C'est elle qui fait les lois ici"}, {"ar": "صادفت مقالة مثيرة للاهتمام في الجريدة اليوم", "en": "I came across an interesting article in the newspaper today", "fr": "J'ai trouvé un article intéressant dans le journal aujourd'hui"}, {"ar": "البحيرة جفت", "en": "Lake dried up", "fr": "Le lac s'est asséché"}, {"ar": "ضحك خافت", "en": "Giggling", "fr": "Glousser"}, {"ar": "لم أتحدث معه منذ سنوات", "en": "I haven't spoken to him in years", "fr": "Je ne lui ai pas parlé depuis des années"}];
 
 /* ───────── Remembered state ───────── */
 let remembered = {};
