--- a/part 4_en.html
+++ b/part 4_en.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr"><head>
+<html lang="ar"><head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
 <title>Flashcards</title>
@@ -105,16 +105,24 @@ body.scrolled #return-button{
 <!-- Settings modal -->
 <div id="settings-modal" class="modal"><div class="modal-content">
 <span class="close" title="Close">×</span><h2>Voice Settings</h2>
-<div class="lang-settings" data-lang="fr">
-  <label>French voice:</label>
+<div class="lang-settings" data-lang="ar">
+  <label>Arabic voice:</label>
   <select class="voice-select"></select>
   <label>Rate: <span class="rate-value">1</span></label>
   <input type="range" class="rate-range" min="0.5" max="2" step="0.1" value="1">
   <label>Pitch: <span class="pitch-value">1</span></label>
   <input type="range" class="pitch-range" min="0" max="2" step="0.1" value="1">
 </div><hr>
-<div class="lang-settings" data-lang="nl">
-  <label>Dutch voice:</label>
+<div class="lang-settings" data-lang="en">
+  <label>English voice:</label>
+  <select class="voice-select"></select>
+  <label>Rate: <span class="rate-value">1</span></label>
+  <input type="range" class="rate-range" min="0.5" max="2" step="0.1" value="1">
+  <label>Pitch: <span class="pitch-value">1</span></label>
+  <input type="range" class="pitch-range" min="0" max="2" step="0.1" value="1">
+</div><hr>
+<div class="lang-settings" data-lang="fr">
+  <label>French voice:</label>
   <select class="voice-select"></select>
   <label>Rate: <span class="rate-value">1</span></label>
   <input type="range" class="rate-range" min="0.5" max="2" step="0.1" value="1">
@@ -125,8 +133,8 @@ body.scrolled #return-button{
 <button id="return-button" title="Return">←</button>
 
 <script>
-const LANGS = ["fr", "nl"];
-const CARDS = [{"fr": "Peux-tu me dire combien tu as besoin ?", "nl": "Kun je me vertellen hoeveel je nodig hebt."}, {"fr": "Je suis parti à l'école.", "nl": "Ik ben naar school gegaan."}, {"fr": "Non, je ne suis pas parti à l'école.", "nl": "Nee, ik ben niet naar school gegaan."}, {"fr": "J'ai parlé avec lui.", "nl": "Ik heb met hem gesproken."}, {"fr": "Non, je n'ai pas parlé avec lui.", "nl": "Nee, ik heb niet met hem gesproken."}, {"fr": "J'ai bu du jus d'orange.", "nl": "Ik heb sinaasappelsap gedronken."}, {"fr": "Non, je n'ai pas bu de jus d'orange.", "nl": "Nee, ik heb geen sinaasappelsap gedronken."}, {"fr": "J'ai bu.", "nl": "Ik heb gedronken."}, {"fr": "Non, je n'ai pas bu.", "nl": "Nee, ik heb niet gedronken."}, {"fr": "J'ai mangé.", "nl": "Ik heb gegeten."}, {"fr": "Non, je n'ai pas mangé.", "nl": "Nee, ik heb niet gegeten."}, {"fr": "J'ai fait ça.", "nl": "Ik heb dat gedaan."}, {"fr": "Non, je n'ai pas fait ça.", "nl": "Nee, ik heb dat niet gedaan."}, {"fr": "J'ai fait.", "nl": "Ik heb gedaan."}, {"fr": "Je n'ai rien fait.", "nl": "Ik heb niets gedaan."}, {"fr": "J'ai mangé une pomme.", "nl": "Ik heb een appel gegeten."}, {"fr": "Non, je n'ai pas mangé de pomme.", "nl": "Nee, ik heb geen appel gegeten."}, {"fr": "J'ai décidé.", "nl": "Ik heb besloten."}, {"fr": "Je n'ai pas décidé.", "nl": "Ik heb niet besloten."}, {"fr": "Je n'ai pas encore décidé.", "nl": "Ik heb nog niet besloten."}, {"fr": "Ça c'est vrai.", "nl": "Dat is waar."}, {"fr": "Non, ça ce n'est pas vrai.", "nl": "Nee, dat is niet waar."}, {"fr": "Tu peux m'aider.", "nl": "Je kunt me helpen."}, {"fr": "Non, tu ne peux pas m'aider.", "nl": "Nee, je kunt me niet helpen."}, {"fr": "Je ne sais pas.", "nl": "Ik weet het niet."}, {"fr": "Non, tu ne m'aides pas.", "nl": "Nee, je helpt me niet."}, {"fr": "Tu m'as aidé.", "nl": "Je hebt me geholpen."}, {"fr": "Non, tu ne m'as pas aidé.", "nl": "Nee, je hebt me niet geholpen."}, {"fr": "J'ai fait beaucoup de choses.", "nl": "Ik heb veel dingen gedaan."}, {"fr": "Je n'ai rien fait.", "nl": "Ik heb niets gedaan."}, {"fr": "Je dois l'améliorer.", "nl": "Ik moet het verbeteren."}, {"fr": "Je sais.", "nl": "Ik weet het."}, {"fr": "Je ne sais pas.", "nl": "Ik weet het niet."}];
+const LANGS = ["ar", "en", "fr"];
+const CARDS = [{"ar": "فتح السدود", "en": "Unclogging pipes", "fr": "Déboucher les tuyaux"}, {"ar": "أعصاب", "en": "Nerve veins", "fr": "Veines nerveuses"}, {"ar": "انسداد الأنف", "en": "Clogged nose", "fr": "Nez bouché"}, {"ar": "قنوات مسدودة", "en": "Clogged pipes", "fr": "Canalisations bouchées"}, {"ar": "من المهم التمييز بين الحقائق والآراء", "en": "It's important to distinguish between fact and opinion.", "fr": "Il est important de distinguer entre les faits et les opinions."}, {"ar": "لكنهم كانوا متقدمين جدًا وندين بالكثير لاختراعاتهم. على سبيل المثال، قاموا بتطوير أول نظام كتابة!", "en": "But they were very sophisticated, and we owe a lot to their inventions. For example, they developed the first writing system!", "fr": "Mais ils étaient très sophistiqués, et nous devons beaucoup à leurs inventions. Par exemple, ils ont développé le premier système d'écriture !"}, {"ar": "كانت ثقافة الرياض تعرف فقط في المدن الكبرى", "en": "The riad culture used to be known only in big cities.", "fr": "La culture des riads était connue uniquement dans les grandes villes."}, {"ar": "لم تكن تدفع انتباهك!", "en": "You weren't paying attention!", "fr": "Tu ne faisais pas attention !"}, {"ar": "سحر، شعوذة في القرن السادس عشر، تم اتهام العديد من الأشخاص بممارسة السحر", "en": "Witchcraft; in the 1600s, many people were accused of practicing sorcery.", "fr": "La sorcellerie; au XVIIe siècle, de nombreuses personnes ont été accusées de pratiquer la magie."}, {"ar": "نسبة الوفاة مرتفعة في إيطاليا", "en": "The death rate is very high in Italy.", "fr": "Le taux de mortalité est très élevé en Italie."}, {"ar": "ظروف", "en": "Conditions.", "fr": "Conditions."}, {"ar": "مكلخ مجلج", "en": "Clueless.", "fr": "Sans idée."}, {"ar": "مغري", "en": "Appetizing.", "fr": "Appétissant."}, {"ar": "مبتهج", "en": "Ecstatic.", "fr": "Exalté."}, {"ar": "كما هو متوقع، النباتات ذبلت بسبب الجفاف.", "en": "As expected, all the crops withered because of the drought.", "fr": "Comme prévu, toutes les cultures ont flétri à cause de la sécheresse."}, {"ar": "حمضي", "en": "Acidic.", "fr": "Acide."}];
 
 /* ───────── Remembered state ───────── */
 let remembered = {};
