--- a/index_en.html
+++ b/index_en.html
@@ -119,6 +119,7 @@
     <a href="part 16_en.html">Part 16</a>
     <a href="part 17_en.html">Part 17</a>
     <a href="part 18_en.html">Part 18</a>
+    <a href="money_en.html">Money</a>
   </nav>
 
   <div class="scroll-buffer"></div>
